Revert "colors checkpoint"
This reverts commit 4f8e62a2f062f43b9510258c30f2e3c50ca35eca.